feat: add pagination and sorting support using Pageable refactor: add ProductMapper class and implement separation of concerns